<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <EditText
        android:id="@+id/etServerAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/server_address"
        android:text="@string/default_server_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnReset"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/etServerAddress"/>

    <EditText
        android:id="@+id/etServerPort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/server_port"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/etServerAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etImei"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/imei"
        app:layout_constraintTop_toBottomOf="@+id/etServerPort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRandomize"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/btnRandomize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/randomize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etImei"
        app:layout_constraintBottom_toBottomOf="@+id/etImei"/>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintTop_toBottomOf="@+id/etImei"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
